--- a/src/components/menu-item/menu-item.scss
+++ b/src/components/menu-item/menu-item.scss
@@ -5,8 +5,27 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
+  border: 1px solid rgb(0, 48, 145);
   margin: 0 7.5px 15px;
+  overflow: hidden;
+  
+  &:hover {
+    cursor: pointer;
+    & .background-image {
+      transform: scale(1.1);
+      opacity: 0.7;
+      transition: 6s cubic-bezier(.17,.67,.83,.67)
+
+    }
+    & .content {
+      opacity: 0.9;
+    }
+  }
+
+
+  &.large {
+    height: 380px;
+  }
 
   &:first-child {
     margin-right: 7.5px;
@@ -16,6 +35,13 @@
     margin-left: 7.5px;
   }
 
+  .background-image {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+  }
+
   .content {
     height: 90px;
     padding: 0 25px;
@@ -23,7 +49,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
+    border: 1px solid rgb(182, 12, 12);
+    background-color: rgb(255, 255, 255);
+    opacity: 0.7;
+    font-family: 'Dancing Script', cursive;
+    position: absolute;
 
     .title {
       font-weight: bold;
