--- a/src/views/checkout.scss
+++ b/src/views/checkout.scss
@@ -21,11 +21,24 @@
         width: 8%;
       }
     }
+
+    
   }
 
   .total {
     margin-top: 30px;
     margin-left: auto;
     font-size: 36px;
+
+  }
+  .button {
+    margin-left: auto;
+    margin-top: 50px;
+  }
+  .warning {
+    color: red;
+    font-size: 24px;
+    text-align: center;
+    margin-top: 40px;
   }
 }
