added fontawesome dependencies to project, updateding currency icons on relevant components

--- a/src/components/checkout-item/checkout-item.scss
+++ b/src/components/checkout-item/checkout-item.scss
@@ -6,6 +6,7 @@
   padding: 15px 0;
   font-size: 20px;
   align-items: center;
+  font-family: 'Ubuntu', sans-serif;
 
   .image-container {
     width: 23%;
