--- a/src/views/checkout.scss
+++ b/src/views/checkout.scss
@@ -40,5 +40,7 @@
     font-size: 24px;
     text-align: center;
     margin-top: 40px;
+    font-family: 'Ubuntu', sans-serif;
+    padding-bottom: 20px;
   }
 }
