--- a/src/components/sign-up/sign-up.scss
+++ b/src/components/sign-up/sign-up.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 380px;
+  font-family: 'Ubuntu', sans-serif;
 
   .title {
     margin: 10px 0;
